bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones : definicion
   3               | definiciones definicion

   4  definicion : definicion_variable
   5             | definicion_struct
   6             | definicion_funcion
   7             | definicion_procedimiento

   8  definiciones_variable_opc :
   9                            | definiciones_variable

  10  definiciones_variable : definiciones_variable definicion_variable
  11                        | definicion_variable

  12  definicion_variable : DIM IDENT array_opc AS tipo ';'

  13  array_opc :
  14            | lista_dimensiones

  15  lista_dimensiones : '[' CTE_ENTERA ']'
  16                    | lista_dimensiones '[' CTE_ENTERA ']'

  17  definicion_struct : TYPE IDENT lista_campos END TYPE ';'

  18  definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias END FUNCTION ';'

  19  definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias END PROC ';'

  20  listaParametrosOpcional :
  21                          | listaParametros

  22  listaParametros : listaParametros ',' IDENT AS tipo
  23                  | IDENT AS tipo

  24  sentencias_opc :
  25                 | sentencias

  26  sentencias : sentencias sentencia
  27             | sentencia

  28  sentencia : PRINT expresion ';'
  29            | READ expresion ';'
  30            | expresion '=' expresion ';'
  31            | RETURN expresion ';'
  32            | RETURN ';'
  33            | WHILE expresion DO sentencias END WHILE ';'
  34            | IF expresion THEN sentencias_opc END IF ';'
  35            | IF expresion THEN sentencias_opc ELSE sentencias_opc END IF ';'
  36            | IDENT '(' expresiones_opc ')' ';'

  37  expresiones_opc :
  38                  | expresiones

  39  expresiones : expresiones ',' expresion
  40              | expresion

  41  expresion : IDENT
  42            | CTE_ENTERA
  43            | CHARACTER
  44            | REAL
  45            | expresion '+' expresion
  46            | expresion '-' expresion
  47            | expresion '*' expresion
  48            | expresion '/' expresion
  49            | expresion '%' expresion
  50            | expresion '[' expresion ']'
  51            | expresion '.' expresion
  52            | expresion '<' expresion
  53            | expresion '>' expresion
  54            | expresion MENORIGUAL expresion
  55            | expresion MAYORIGUAL expresion
  56            | expresion AND expresion
  57            | expresion OR expresion
  58            | NOT expresion
  59            | expresion IGUALDAD expresion
  60            | expresion DISTINTO expresion
  61            | IDENT '(' expresiones_opc ')'

  62  tipo : INTEGER
  63       | REAL
  64       | CHARACTER
  65       | IDENT

  66  lista_campos :
  67               | lista_campos campo

  68  campo : IDENT array_opc AS tipo ';'

state 0
	$accept : . programa $end  (0)

	DIM  shift 1
	FUNCTION  shift 2
	PROC  shift 3
	TYPE  shift 4
	.  error

	programa  goto 5
	definiciones  goto 6
	definicion  goto 7
	definicion_variable  goto 8
	definicion_struct  goto 9
	definicion_funcion  goto 10
	definicion_procedimiento  goto 11


state 1
	definicion_variable : DIM . IDENT array_opc AS tipo ';'  (12)

	IDENT  shift 12
	.  error


state 2
	definicion_funcion : FUNCTION . IDENT '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias END FUNCTION ';'  (18)

	IDENT  shift 13
	.  error


state 3
	definicion_procedimiento : PROC . IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias END PROC ';'  (19)

	IDENT  shift 14
	.  error


state 4
	definicion_struct : TYPE . IDENT lista_campos END TYPE ';'  (17)

	IDENT  shift 15
	.  error


state 5
	$accept : programa . $end  (0)

	$end  accept


state 6
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	DIM  shift 1
	FUNCTION  shift 2
	PROC  shift 3
	TYPE  shift 4
	$end  reduce 1

	definicion  goto 16
	definicion_variable  goto 8
	definicion_struct  goto 9
	definicion_funcion  goto 10
	definicion_procedimiento  goto 11


state 7
	definiciones : definicion .  (2)

	.  reduce 2


state 8
	definicion : definicion_variable .  (4)

	.  reduce 4


state 9
	definicion : definicion_struct .  (5)

	.  reduce 5


state 10
	definicion : definicion_funcion .  (6)

	.  reduce 6


state 11
	definicion : definicion_procedimiento .  (7)

	.  reduce 7


state 12
	definicion_variable : DIM IDENT . array_opc AS tipo ';'  (12)
	array_opc : .  (13)

	'['  shift 17
	AS  reduce 13

	array_opc  goto 18
	lista_dimensiones  goto 19


state 13
	definicion_funcion : FUNCTION IDENT . '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias END FUNCTION ';'  (18)

	'('  shift 20
	.  error


state 14
	definicion_procedimiento : PROC IDENT . '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias END PROC ';'  (19)

	'('  shift 21
	.  error


state 15
	definicion_struct : TYPE IDENT . lista_campos END TYPE ';'  (17)
	lista_campos : .  (66)

	.  reduce 66

	lista_campos  goto 22


state 16
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 17
	lista_dimensiones : '[' . CTE_ENTERA ']'  (15)

	CTE_ENTERA  shift 23
	.  error


state 18
	definicion_variable : DIM IDENT array_opc . AS tipo ';'  (12)

	AS  shift 24
	.  error


state 19
	array_opc : lista_dimensiones .  (14)
	lista_dimensiones : lista_dimensiones . '[' CTE_ENTERA ']'  (16)

	'['  shift 25
	AS  reduce 14


state 20
	definicion_funcion : FUNCTION IDENT '(' . listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias END FUNCTION ';'  (18)
	listaParametrosOpcional : .  (20)

	IDENT  shift 26
	')'  reduce 20

	listaParametrosOpcional  goto 27
	listaParametros  goto 28


state 21
	definicion_procedimiento : PROC IDENT '(' . listaParametrosOpcional ')' definiciones_variable_opc sentencias END PROC ';'  (19)
	listaParametrosOpcional : .  (20)

	IDENT  shift 26
	')'  reduce 20

	listaParametrosOpcional  goto 29
	listaParametros  goto 28


state 22
	definicion_struct : TYPE IDENT lista_campos . END TYPE ';'  (17)
	lista_campos : lista_campos . campo  (67)

	IDENT  shift 30
	END  shift 31
	.  error

	campo  goto 32


state 23
	lista_dimensiones : '[' CTE_ENTERA . ']'  (15)

	']'  shift 33
	.  error


state 24
	definicion_variable : DIM IDENT array_opc AS . tipo ';'  (12)

	IDENT  shift 34
	INTEGER  shift 35
	REAL  shift 36
	CHARACTER  shift 37
	.  error

	tipo  goto 38


state 25
	lista_dimensiones : lista_dimensiones '[' . CTE_ENTERA ']'  (16)

	CTE_ENTERA  shift 39
	.  error


state 26
	listaParametros : IDENT . AS tipo  (23)

	AS  shift 40
	.  error


state 27
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional . ')' AS tipo definiciones_variable_opc sentencias END FUNCTION ';'  (18)

	')'  shift 41
	.  error


state 28
	listaParametrosOpcional : listaParametros .  (21)
	listaParametros : listaParametros . ',' IDENT AS tipo  (22)

	','  shift 42
	')'  reduce 21


state 29
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional . ')' definiciones_variable_opc sentencias END PROC ';'  (19)

	')'  shift 43
	.  error


state 30
	campo : IDENT . array_opc AS tipo ';'  (68)
	array_opc : .  (13)

	'['  shift 17
	AS  reduce 13

	array_opc  goto 44
	lista_dimensiones  goto 19


state 31
	definicion_struct : TYPE IDENT lista_campos END . TYPE ';'  (17)

	TYPE  shift 45
	.  error


state 32
	lista_campos : lista_campos campo .  (67)

	.  reduce 67


state 33
	lista_dimensiones : '[' CTE_ENTERA ']' .  (15)

	.  reduce 15


state 34
	tipo : IDENT .  (65)

	.  reduce 65


state 35
	tipo : INTEGER .  (62)

	.  reduce 62


state 36
	tipo : REAL .  (63)

	.  reduce 63


state 37
	tipo : CHARACTER .  (64)

	.  reduce 64


state 38
	definicion_variable : DIM IDENT array_opc AS tipo . ';'  (12)

	';'  shift 46
	.  error


state 39
	lista_dimensiones : lista_dimensiones '[' CTE_ENTERA . ']'  (16)

	']'  shift 47
	.  error


state 40
	listaParametros : IDENT AS . tipo  (23)

	IDENT  shift 34
	INTEGER  shift 35
	REAL  shift 36
	CHARACTER  shift 37
	.  error

	tipo  goto 48


state 41
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' . AS tipo definiciones_variable_opc sentencias END FUNCTION ';'  (18)

	AS  shift 49
	.  error


state 42
	listaParametros : listaParametros ',' . IDENT AS tipo  (22)

	IDENT  shift 50
	.  error


state 43
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' . definiciones_variable_opc sentencias END PROC ';'  (19)
	definiciones_variable_opc : .  (8)

	DIM  shift 1
	IDENT  reduce 8
	REAL  reduce 8
	CHARACTER  reduce 8
	CTE_ENTERA  reduce 8
	PRINT  reduce 8
	IF  reduce 8
	WHILE  reduce 8
	RETURN  reduce 8
	READ  reduce 8
	NOT  reduce 8

	definicion_variable  goto 51
	definiciones_variable_opc  goto 52
	definiciones_variable  goto 53


state 44
	campo : IDENT array_opc . AS tipo ';'  (68)

	AS  shift 54
	.  error


state 45
	definicion_struct : TYPE IDENT lista_campos END TYPE . ';'  (17)

	';'  shift 55
	.  error


state 46
	definicion_variable : DIM IDENT array_opc AS tipo ';' .  (12)

	.  reduce 12


state 47
	lista_dimensiones : lista_dimensiones '[' CTE_ENTERA ']' .  (16)

	.  reduce 16


state 48
	listaParametros : IDENT AS tipo .  (23)

	.  reduce 23


state 49
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS . tipo definiciones_variable_opc sentencias END FUNCTION ';'  (18)

	IDENT  shift 34
	INTEGER  shift 35
	REAL  shift 36
	CHARACTER  shift 37
	.  error

	tipo  goto 56


state 50
	listaParametros : listaParametros ',' IDENT . AS tipo  (22)

	AS  shift 57
	.  error


state 51
	definiciones_variable : definicion_variable .  (11)

	.  reduce 11


state 52
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc . sentencias END PROC ';'  (19)

	IDENT  shift 58
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	PRINT  shift 62
	IF  shift 63
	WHILE  shift 64
	RETURN  shift 65
	READ  shift 66
	NOT  shift 67
	.  error

	sentencias  goto 68
	sentencia  goto 69
	expresion  goto 70


state 53
	definiciones_variable_opc : definiciones_variable .  (9)
	definiciones_variable : definiciones_variable . definicion_variable  (10)

	DIM  shift 1
	IDENT  reduce 9
	REAL  reduce 9
	CHARACTER  reduce 9
	CTE_ENTERA  reduce 9
	PRINT  reduce 9
	IF  reduce 9
	WHILE  reduce 9
	RETURN  reduce 9
	READ  reduce 9
	NOT  reduce 9

	definicion_variable  goto 71


state 54
	campo : IDENT array_opc AS . tipo ';'  (68)

	IDENT  shift 34
	INTEGER  shift 35
	REAL  shift 36
	CHARACTER  shift 37
	.  error

	tipo  goto 72


state 55
	definicion_struct : TYPE IDENT lista_campos END TYPE ';' .  (17)

	.  reduce 17


state 56
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS tipo . definiciones_variable_opc sentencias END FUNCTION ';'  (18)
	definiciones_variable_opc : .  (8)

	DIM  shift 1
	IDENT  reduce 8
	REAL  reduce 8
	CHARACTER  reduce 8
	CTE_ENTERA  reduce 8
	PRINT  reduce 8
	IF  reduce 8
	WHILE  reduce 8
	RETURN  reduce 8
	READ  reduce 8
	NOT  reduce 8

	definicion_variable  goto 51
	definiciones_variable_opc  goto 73
	definiciones_variable  goto 53


state 57
	listaParametros : listaParametros ',' IDENT AS . tipo  (22)

	IDENT  shift 34
	INTEGER  shift 35
	REAL  shift 36
	CHARACTER  shift 37
	.  error

	tipo  goto 74


state 58
	sentencia : IDENT . '(' expresiones_opc ')' ';'  (36)
	expresion : IDENT .  (41)
	expresion : IDENT . '(' expresiones_opc ')'  (61)

	'('  shift 75
	MAYORIGUAL  reduce 41
	MENORIGUAL  reduce 41
	DISTINTO  reduce 41
	IGUALDAD  reduce 41
	AND  reduce 41
	OR  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'['  reduce 41
	'='  reduce 41
	'%'  reduce 41
	'.'  reduce 41
	'<'  reduce 41
	'>'  reduce 41


state 59
	expresion : REAL .  (44)

	.  reduce 44


state 60
	expresion : CHARACTER .  (43)

	.  reduce 43


state 61
	expresion : CTE_ENTERA .  (42)

	.  reduce 42


state 62
	sentencia : PRINT . expresion ';'  (28)

	IDENT  shift 76
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	NOT  shift 67
	.  error

	expresion  goto 77


state 63
	sentencia : IF . expresion THEN sentencias_opc END IF ';'  (34)
	sentencia : IF . expresion THEN sentencias_opc ELSE sentencias_opc END IF ';'  (35)

	IDENT  shift 76
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	NOT  shift 67
	.  error

	expresion  goto 78


state 64
	sentencia : WHILE . expresion DO sentencias END WHILE ';'  (33)

	IDENT  shift 76
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	NOT  shift 67
	.  error

	expresion  goto 79


state 65
	sentencia : RETURN . expresion ';'  (31)
	sentencia : RETURN . ';'  (32)

	IDENT  shift 76
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	NOT  shift 67
	';'  shift 80
	.  error

	expresion  goto 81


state 66
	sentencia : READ . expresion ';'  (29)

	IDENT  shift 76
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	NOT  shift 67
	.  error

	expresion  goto 82


state 67
	expresion : NOT . expresion  (58)

	IDENT  shift 76
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	NOT  shift 67
	.  error

	expresion  goto 83


state 68
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias . END PROC ';'  (19)
	sentencias : sentencias . sentencia  (26)

	IDENT  shift 58
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	PRINT  shift 62
	END  shift 84
	IF  shift 63
	WHILE  shift 64
	RETURN  shift 65
	READ  shift 66
	NOT  shift 67
	.  error

	sentencia  goto 85
	expresion  goto 70


state 69
	sentencias : sentencia .  (27)

	.  reduce 27


state 70
	sentencia : expresion . '=' expresion ';'  (30)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (54)
	expresion : expresion . MAYORIGUAL expresion  (55)
	expresion : expresion . AND expresion  (56)
	expresion : expresion . OR expresion  (57)
	expresion : expresion . IGUALDAD expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)

	MAYORIGUAL  shift 86
	MENORIGUAL  shift 87
	DISTINTO  shift 88
	IGUALDAD  shift 89
	AND  shift 90
	OR  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'='  shift 97
	'%'  shift 98
	'.'  shift 99
	'<'  shift 100
	'>'  shift 101
	.  error


state 71
	definiciones_variable : definiciones_variable definicion_variable .  (10)

	.  reduce 10


state 72
	campo : IDENT array_opc AS tipo . ';'  (68)

	';'  shift 102
	.  error


state 73
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc . sentencias END FUNCTION ';'  (18)

	IDENT  shift 58
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	PRINT  shift 62
	IF  shift 63
	WHILE  shift 64
	RETURN  shift 65
	READ  shift 66
	NOT  shift 67
	.  error

	sentencias  goto 103
	sentencia  goto 69
	expresion  goto 70


state 74
	listaParametros : listaParametros ',' IDENT AS tipo .  (22)

	.  reduce 22


state 75
	sentencia : IDENT '(' . expresiones_opc ')' ';'  (36)
	expresion : IDENT '(' . expresiones_opc ')'  (61)
	expresiones_opc : .  (37)

	IDENT  shift 76
	REAL  shift 59
	CHARACTER  shift 60
	CTE_ENTERA  shift 61
	NOT  shift 67
	')'  reduce 37

	expresion  goto 104
	expresiones_opc  goto 105
	expresiones  goto 106


state 76
	expresion : IDENT .  (41)
	expresion : IDENT . '(' expresiones_opc ')'  (61)

	'('  shift 107
	THEN  reduce 41
	MAYORIGUAL  reduce 41
	MENORIGUAL  reduce 41
	DISTINTO  reduce 41
	IGUALDAD  reduce 41
	AND  reduce 41
	OR  reduce 41
	DO  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	';'  reduce 41
	'['  reduce 41
	']'  reduce 41
	')'  reduce 41
	','  reduce 41
	'='  reduce 41
	'%'  reduce 41
	'.'  reduce 41
	'<'  reduce 41
	'>'  reduce 41


state 77
	sentencia : PRINT expresion . ';'  (28)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (54)
	expresion : expresion . MAYORIGUAL expresion  (55)
	expresion : expresion . AND expresion  (56)
	expresion : expresion . OR expresion  (57)
	expresion : expresion . IGUALDAD expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)

	MAYORIGUAL  shift 86
	MENORIGUAL  shift 87
	DISTINTO  shift 88
	IGUALDAD  shift 89
	AND  shift 90
	OR  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	';'  shift 108
	'['  shift 96
	'%'  shift 98
	'.'  shift 99
	'<'  shift 100
	'>'  shift 101
	.  error


state 78
	sentencia : IF expresion . THEN sentencias_opc END IF ';'  (34)
	sentencia : IF expresion . THEN sentencias_opc ELSE sentencias_opc END IF ';'  (35)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (54)
	expresion : expresion . MAYORIGUAL expresion  (55)
	expresion : expresion . AND expresion  (56)
	expresion : expresion . OR expresion  (57)
	expresion : expresion . IGUALDAD expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)

	THEN  shift 109
	MAYORIGUAL  shift 86
	MENORIGUAL  shift 87
	DISTINTO  shift 88
	IGUALDAD  shift 89
	AND  shift 90
	OR  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'%'  shift 98
	'.'  shift 99
	'<'  shift 100
	'>'  shift 101
	.  error


state 79
	sentencia : WHILE expresion . DO sentencias END WHILE ';'  (33)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (54)
	expresion : expresion . MAYORIGUAL expresion  (55)
	expresion : expresion . AND expresion  (56)
	expresion : expresion . OR expresion  (57)
	expresion : expresion . IGUALDAD expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)

	MAYORIGUAL  shift 86
	MENORIGUAL  shift 87
	DISTINTO  shift 88
	IGUALDAD  shift 89
	AND  shift 90
	OR  shift 91
	DO  shift 110
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'%'  shift 98
	'.'  shift 99
	'<'  shift 100
	'>'  shift 101
	.  error


state 80
	sentencia : RETURN ';' .  (32)

	.  reduce 32

